# X_user_recommendation

./: .gitignore  README.MD  config.py  pyproject.toml  requirements.txt
docs/: architecture_workflow.md
outputs/: test_candidates.csv
scripts/: generate_test_user.py  kaggle_download.py
src/api/: dependencies.py  main.py  routes.py  schema.py  schemas.py  services.py
src/ingestion/: loader.py  schema.py  splitter.py
src/preprocessing/: pipeline.py  validators.py
src/ranking/: __init__.py  dataset.py  encoder.py  evaluate.py  model.py  pair_sampler.py  train.py
src/retrieval/: candidate_gen.py
src/utils/: logger.py
tests/: test_candidate_generator.py  test_ingestion.py  test_preprocessing.py  test_ranker.py
